# cloud-infrastructure-snippets

./: LICENSE  README.md  pyproject.toml
devops/: Pulumi.devops.yaml  Pulumi.yaml  __main__.py
devops/components/: instance.py
devops/user_data/: instance.sh  monitor.sh  runner.sh
gitlab/: gitlab.rb
linux/: create_swap.sh  disable_auto_update.sh  enable-user-namespace-to-docker.sh  install-aws-sdkv2.sh  limit-docker-log-file.sh  limit-system-file.sh
reverse_proxy/: nginx.conf
reverse_proxy/sites-available/: example.conf
service/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
service/components/: __init__.py  elasticsearch.py
